add mcp-servers config to build

--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
   "files": [
     "./bin",
     "./dist",
-    "./oclif.manifest.json"
+    "./oclif.manifest.json",
+    "./mcp-servers.json"
   ],
   "homepage": "https://github.com/mcpgod/cli",
   "keywords": [
