--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.6.1",
     "@oclif/core": "^4",
-    "winston": "^3.17.0",
     "strip-ansi": "^7",
+    "winston": "^3.17.0",
     "zod": "^3"
   },
   "devDependencies": {
@@ -21,6 +21,7 @@
     "@types/chai": "^4",
     "@types/mocha": "^10",
     "@types/node": "^18",
+    "c8": "^10.1.3",
     "chai": "^4",
     "eslint": "^9",
     "eslint-config-oclif": "^6",
@@ -60,6 +61,7 @@
     "posttest": "npm run lint || true",
     "prepack": "oclif manifest && oclif readme",
     "test": "mocha --forbid-only \"test/**/*.test.ts\"",
+    "coverage": "c8 --reporter=lcov --reporter=text npm test",
     "version": "oclif readme && git add README.md"
   },
   "types": "dist/index.d.ts"
