--- a/.github/workflows/onRelease.yml
+++ b/.github/workflows/onRelease.yml
@@ -2,7 +2,10 @@ name: publish
 
 on:
   release:
-    types: [released]
+    types: [published]
+  push:
+    tags:
+      - 'v*'
 
 jobs:
   publish:
